--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -2,7 +2,7 @@
 layout: project
 title: Baxter Stocking Stuffer
 date: December 12, 2014
-image: http://static3.robotikka.com/wp-content/uploads/2012/11/rethink-robotics-baxter-worker-robot.jpg
+image: https://raw.githubusercontent.com/andrewturchina/portfolio/gh-pages/baxter.jpg
 ---
 
 ## Overview
