--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -2,7 +2,7 @@
 layout: project
 title: Baxter Stocking Stuffer
 date: December 12, 2014
-image: https://raw.githubusercontent.com/andrewturchina/portfolio/gh-pages/baxter.jpg
+image: baxter.jpg
 ---
 
 ## Overview
