--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -2,7 +2,7 @@
 layout: project
 title: Baxter Stocking Stuffer
 date: December 12, 2014
-image: baxter.jpg
+image: http://www.blogcdn.com/www.engadget.com/media/2012/09/rethink-robotics-baxter-worker-robot.jpg
 ---
 
 ## Overview
