--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -2,7 +2,7 @@
 layout: project
 title: Baxter Stocking Stuffer
 date: December 12, 2014
-image: baxter.jpg
+image: http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/baxter_zpsv1iptg4q.jpg
 ---
 
 ## Overview
