--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -1,16 +1,21 @@
 ---
 layout: project
 title: Baxter Stocking Stuffer
-date: December 12, 2014
+date: December 2014
 image: http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/baxter_zpsv1iptg4q.jpg
 ---
 
 ## Overview
-This project involved using a [Baxter robot](http://www.rethinkrobotics.com/baxter/) to do object recognition and tag tracking to place objects in desired locations. 
+This project involved using a [Baxter robot](http://www.rethinkrobotics.com/baxter/) to do object recognition and tag tracking to place objects in desired locations. Programming for this project was done in python and utilized ROS for communication with the Baxter robot.
 
-Click on the image below to watch the video!
+Baxter was given four different color objects on a table in front of it and four locations for these objects to the side of the robot. The robot has a two finger gripper and a camera in the hand. This camera was used to capture images for color recognition and tag identification. Baxter was programmed to inspect the packaging location and scan a tag located above the desired location. The tag contained information about what color object is required. Baxter then surveyed the table for the right colored object and picked the object up. After this, path planning was used to move Baxter's gripper to the desired final location of the object and the object was released.   
+
+Complete information and repository can be found [here](https://github.com/ChuChuIgbokwe/ME495-Final-Project-Baxter-Stocking-Stuffer)  
+
+Click on the image below to watch the video!  
+
 [![Screenshot](https://raw.githubusercontent.com/ChuChuIgbokwe/ME495-Final-Project-Baxter-Stocking-Stuffer/master/clippicture.png)](https://vimeo.com/114372776)
 
-More information and repository can be found [here](https://github.com/ChuChuIgbokwe/ME495-Final-Project-Baxter-Stocking-Stuffer)
+
 
 
