--- a/_projects/2014-09-23-project-2.md
+++ b/_projects/2014-09-23-project-2.md
@@ -1,14 +1,16 @@
 ---
 layout: project
 title: Tag Tracking
-date: November 5, 2014
+date: November 2014
 image: https://raw.githubusercontent.com/andrewturchina/miniproject1/master/ar_sys_pic.png
 ---
 
 ## Overview
 
-This project involved setting up, implementing, and testing several ROS tag tracking packages. 
+This project involved setting up, implementing, and testing several ROS tag tracking packages to estimate the pose of an object. Being able to locate the postition and angle of an object can be very useful in robotic applications such as path planning for grasping applications.  
 
-Overview and repository located [here](https://github.com/ablarry91/ros-tag-tracking)
+Three tag tracking packages were tested and results were compared based on noise, distance, frequency, light sensitivity, and interuptions of visibility.
 
+A full tutorial with details on the process of camera calibration, package installation, and complete test results can be found in [this repository](https://github.com/ablarry91/ros-tag-tracking).
 
+![qr_code_track](http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/tagtrackpic_zpspnoibmag.png)
