--- a/_projects/2014-09-24-project-3.md
+++ b/_projects/2014-09-24-project-3.md
@@ -1,13 +1,16 @@
 ---
 layout: project
 title: Robotic hand
-date: March 16, 2014
+date: March 2015
 image: http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/handapril_zpsjdkxwxfp.jpg
 ---
 
 ## Overview
 
-This was a spring quarter project I worked on as part of an independent study. The goal was to understand robotic grippers, design my own, and implement several control methods.
+As part of an independent project in the spring of 2015, I designed, manufactured, and implemented controls onto a robotic hand. 
 
+A common challenge with robotic hands and grippers is adaptability to objects of different shapes and sizes. For this reason, the hand I designed is underactuated.  There is one motor or controller for each finger, rather than a motor at each joint.  This allows for selfadaptability of the hand based on the object it is grasping.  
 
-More details to come, still in progress!
+Another step in the project was to implement a method of controlling the hand. I created programs using python scripts and ROS to send commands to each finger or specific gestures that may be useful such as creating a fist or pointing a finger. In addition, I am working on interfacing the robotic hand with a Leap Motion. The Leap Motion is a 3D controller that tracks different joints in human hands through use of infrared sensors. The image below is a visualization of the Leap Motion showing finger tracking of human hands. I am working through obtaining data of positions of each human finger to translate into position for the robotic hand to imitate motion.  
+
+![leap_motion](http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/leapmotion_zps1u3jdic0.png)
