projects_revision_august

--- a/_projects/2014-09-23-project-2.md
+++ b/_projects/2014-09-23-project-2.md
@@ -7,10 +7,32 @@ image: https://raw.githubusercontent.com/andrewturchina/miniproject1/master/ar_s
 
 ## Overview
 
-This project involved setting up, implementing, and testing several ROS tag tracking packages to estimate the pose of an object. Being able to locate the postition and angle of an object can be very useful in robotic applications such as path planning for grasping applications.  
+This project involved setting up and designing experiments to evaluate several tag tracking packages to assess their usefulness.  Programming for this project was done in python and utilized [ROS](http://wiki.ros.org/ROS/Introduction) (robot operating system).  
 
-Three tag tracking packages were tested and results were compared based on noise, distance, frequency, light sensitivity, and interuptions of visibility.
-
-A full tutorial with details on the process of camera calibration, package installation, and complete test results can be found in [this repository](https://github.com/ablarry91/ros-tag-tracking).
+A full tutorial with details on the process of camera calibration, package installation, and complete test results can be found in [this repository](https://github.com/ablarry91/ros-tag-tracking).  
 
 ![qr_code_track](http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/tagtrackpic_zpspnoibmag.png)
+
+
+### About tag tracking
+Tag tracking is a useful technique to be able to identify an object and estimate it's position and angle. Tags can store a wide range of information based on user need. It can be used in many applications including warehouse shipping and receiving, inventory counts, barcode scanning, and pose estimation. Tag tracking allows added flexibility to systems that comes with an improvement in capturing data.  
+
+### Project outline
+Three tag tracking packages were tested and compared both quantifiably and quantitatively.  We were interested in pose estimate noise, minimum and maximum tracking distance, average tracker frequency, ease of use, light sensitivity, and interuptions of visibility.  
+
+
+### Step by step
+* Camera calibration
+  * A USB webcam was used, however others such as a Kinect may be used for better results
+  * Creates a calibration file by sampling several photos of a known object and calculating a mean
+
+![calibration](http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/calibration_zps21kxnbdg.png)
+
+* Download and install tag tracking packages and dependencies
+* Create launch files to nicely package image data and visual display together for ease of use
+
+* Run experiments and analyze data to for comparisons
+
+![ar_track_alvar](http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/ar_track_alvar_zps1daiadgp.png)
+
+
