--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -6,16 +6,36 @@ image: http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/baxter_
 ---
 
 ## Overview
-This project involved using a [Baxter robot](http://www.rethinkrobotics.com/baxter/) to do object recognition and tag tracking to place objects in desired locations. Programming for this project was done in python and utilized ROS for communication with the Baxter robot.
-
-Baxter was given four different color objects on a table in front of it and four locations for these objects to the side of the robot. The robot has a two finger gripper and a camera in the hand. This camera was used to capture images for color recognition and tag identification. Baxter was programmed to inspect the packaging location and scan a tag located above the desired location. The tag contained information about what color object is required. Baxter then surveyed the table for the right colored object and picked the object up. After this, path planning was used to move Baxter's gripper to the desired final location of the object and the object was released.   
+This project involved using a [Baxter robot](http://www.rethinkrobotics.com/baxter/) to do object recognition and tag tracking (QR and barcode type) to place objects in desired locations. The project team gave it a Christmas theme with stockings and presents. Programming for this project was done in python and utilized [ROS](http://wiki.ros.org/ROS/Introduction) (robot operating system) for communication with the Baxter robot.
 
 Complete information and repository can be found [here](https://github.com/ChuChuIgbokwe/ME495-Final-Project-Baxter-Stocking-Stuffer)  
 
-Click on the image below to watch the video!  
+**_Click_** on the image below to watch the video!  
 
 [![Screenshot](https://raw.githubusercontent.com/ChuChuIgbokwe/ME495-Final-Project-Baxter-Stocking-Stuffer/master/clippicture.png)](https://vimeo.com/114372776)
 
+### About Baxter
+Baxter has two 7 degrees of freedom (DOF) arms, a 360 degree sonar and front camera, and interchangeable end-effectors. Baxter is commonly seen in industrial manufacturing settings and is advertised as an intelligent robot that learns from interaction and works safely among humans. The Baxter robot that was used in this project is a research version that allows programming through ROS.
 
+### Project outline
+Baxter was given four different color objects (presents) on a table in front of it and four locations (stockings) for these objects to the side of the robot. The robot has a two finger gripper and a camera located in the wrist. This camera was used to capture images for color recognition and tag identificiation.
 
+### Step by step
+* Scan the stocking area
+  * Move the arm so that the camera can view all of the stocking's tags
+
+* Identify a stocking that needs a present
+  * Each stocking has a tag above it with information of what present is needed
+
+* Scan the table in front of Baxter
+  * Using color recognition, locate present corresponding to the stocking
+
+* Grasp present and move to stocking
+
+* Drop present into stocking
+
+* Update list of stockings and presents
+  * After a stocking is filled, remove it's tag ID from the search list
+
+* Scan the stocking area for next empty stocking and repeat
 
