--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -2,7 +2,7 @@
 layout: project
 title: Baxter Stocking Stuffer
 date: December 2014
-image: http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/baxter_zpsv1iptg4q.jpg
+image: http://i1380.photobucket.com/albums/ah164/aturchina0528/portfolio/newbaxter_zpstf8fg9e5.png
 ---
 
 ## Overview
@@ -18,7 +18,7 @@ Complete information and repository can be found [here](https://github.com/ChuCh
 Baxter has two 7 degrees of freedom (DOF) arms, a 360 degree sonar and front camera, and interchangeable end-effectors. Baxter is commonly seen in industrial manufacturing settings and is advertised as an intelligent robot that learns from interaction and works safely among humans. The Baxter robot that was used in this project is a research version that allows programming through ROS.
 
 ### Project outline
-Baxter was given four different color objects (presents) on a table in front of it and four locations (stockings) for these objects to the side of the robot. The robot has a two finger gripper and a camera located in the wrist. This camera was used to capture images for color recognition and tag identificiation.
+Baxter was given four different color objects (presents) on a table in front of it and four locations (stockings) for these objects to the side of the robot. The robot has a two finger gripper and a camera located in the wrist. This camera was used to capture images for color recognition and tag identification.
 
 ### Step by step
 * Scan the stocking area
